tests/NormalTests/paczka1/small_fuzzy/26575786.err
Error in line 1: S766 S766 96,8
Error in line 4: m6DvT5SAD S501 96,1
Error in line 6: S766 A226 59,1
Error in line 10: jz2MdNFT S501 56,9
